loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value isGroundWhite
while(isGroundWhite()==true){
      ^Poucet1:2: error: not found: value varnbBaggle
  varnbBaggle=0
  ^Poucet1:5: error: not found: value nbBaggle
      nbBaggle=nbBaggle+1
      ^Poucet1:9: error: not found: value nbBaggle
  if (nbBaggle>=3){
      ^