loopdowhile.Poucet1.scala.code
while(isGroundWhite()==true){
  varnbBaggle=0
  for (i<-1 to 5){
    if (isOverBaggle()==true){
      nbBaggle=nbBaggle+1
    }
     forward()
   }
  if (nbBaggle>=3){
    left()
  }
  else {
    right()
  }
}